# p5_commander

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  deps.ts  flake.nix  mod.ts  shell.nix
.github/workflows/: rust.yml
src/: cli.rs  cli.ts  lib.rs  main.rs  server.ts  utils.ts
src/cli/: book.rs  serve.rs  sketch.rs
src/cli/book/: new.rs
src/cli/sketch/: new.rs
src/commands/: create.ts  dev.ts  generate.ts  new.ts  serve.ts
src/mod/: lib.rs
src/server/: server.ts
src/server/static/: index.css  sketch.css  style.css
src/server/views/: index.handlebars  sketch.handlebars
src/templates/: sketchbook.toml
src/templates/sketch/: index.html  sketch.js  style.css
template/: sketch.js
templates/collection/: jsconfig.json
templates/sketch/: index.html
